frontend/src/web/pages/LobbyPage/LobbyPage.module.css
.pageContainer {
  --container-inline-padding: 20px;
  --container-block-padding: 40px;

  padding-inline: var(--container-inline-padding);
  padding-block: var(--container-block-padding);

  height: calc(100vh - 80px);

  display: flex;
  flex-direction: column;
}

.listSection {
  --list-left-padding: 20px;
  --list-right-padding: 9px;

  --inner-right-padding: calc(
    var(--list-left-padding) - var(--list-right-padding)
  );

  padding-block: 40px;
  padding-left: var(--list-left-padding);
  padding-right: var(--list-right-padding);

  flex: 1;

  gap: 20px;

  flex-direction: column;
}

.list {
  padding-right: var(--inner-right-padding);
}

.buttons {
  display: flex;
  justify-content: space-around;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 5px;
  padding-right: var(--inner-right-padding);
}

.button {
  width: 126px;
  height: 43px;

  font-size: 20px;
  line-height: 26px;

  border: 3px solid var(--throw-throw-burrito);
  box-shadow: 4px 4px 4px 0px var(--shadow);

  background-color: var(--throw-throw-burrito);
}

.color {
	background-color: var(--zombie-kittens);
}

@media only screen and (min-width: 768px) {
  .pageContainer {
    --container-inline-padding: 40px;
    --container-block-padding: 50px;
  }

  .listSection {
    --list-left-padding: 50px;
    --list-right-padding: 20px;
  }

  .button {
    width: 163px;
  }
}

@media only screen and (min-width: 1440px) {
  .pageContainer {
    --container-inline-padding: 60px;
    --container-block-padding: 100px;
  }

  .listSection {
    --list-left-padding: 95px;
    --list-right-padding: 50px;

    padding-block: 80px;
    gap: 50px;
  }

  .button {
    width: 300px;
    height: 60px;

    font-size: 30px;
    line-height: 39px;
  }
}

@media only screen and (min-width: 1920px) {
  .pageContainer {
    --container-inline-padding: 100px;
    --container-block-padding: 120px;
  }

  .listSection {
    --list-left-padding: 100px;
    --list-right-padding: 34px;
  }

  .button {
    height: 80px;

    font-size: 40px;
    line-height: 52px;
  }
}

